# PyRSMQ

./: .flake8  mypy.ini  pyproject.toml
examples/: consumer.py  example.py  producer.py
src/rsmq/: consumer.py  rsmq.py
src/rsmq/cmd/: base_command.py  exceptions.py  get_queue_attributes.py  utils.py
src/tests/: test_rsmq.py
