[tool.poetry]
name = "pyrsmq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
types-redis = "^4.2.0"
config-parser = "^0.0.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
